# latools

./: .gitignore  .travis.yml  Aleksey_Data.ipynb  CHANGELOG.md  Clustering Algorithms.ipynb  Filtering.ipynb  MANIFEST.in  README.md  To Do  UCD_dataformat.json  dev.ipynb  dev_boron.ipynb  dev_boron_evap.ipynb  dev_data_import.ipynb  dev_despike.ipynb  dev_filters.ipynb  dev_fuzzmatch.ipynb  dev_refactor.ipynb  import_ipynb  lagui_tkinter.py  latools2.sublime-project  latools2.sublime-workspace  latools_demo.ipynb  makefile  objects.py  objects_gui.py  qt_lagui.py  requirements.txt  setup.cfg  setup.py  structure_test.ipynb  test_latools.py  testing.ipynb
Resources/: GeoRem_150105_ratios.csv
SRMs/: GeoRem_ratios_160713.csv  SRM_molar.ipynb
Slides/: Intro.ipynb  Intro.slides.html
Supplement/: README.md  cultured_foram_manual.ipynb  fossil_foram_iolite.ipynb  fossil_foram_manual.ipynb  iolite_downcore_foram.ipynb  manual_cultured_foram.ipynb  manual_downcore_foram.ipynb  manual_zircon.ipynb  reproducibility_quants.csv  zircon_manual.ipynb
docs/: .buildinfo  Makefile  genindex.html  index.html  latools.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_source/: Makefile  latools-docs.sublime-project  latools-docs.sublime-workspace  requirements.txt
latools/: D_obj.py  README.md  To Do  UCD_dataformat.dict  __init__.py  classifier_obj.py  dev.ipynb  dev_dspk.ipynb  filt_obj.py  helpers.py  latools.cfg  latools.py  latools2.sublime-project  latools2.sublime-workspace  latools_graveyard.py  objects.py  plots.py  process_fns.py  signal_optimiser.py  (+2 more)
(+784 files in other folders)
