[metadata]
name = latools
version = attr: latools.VERSION
author = Oscar Branson
author_email = ob266@cam.ac.uk
description = Tools for LA-ICPMS data analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oscarbranson/latools
license = MIT
project_urls =
    PalaeoCarb Project = https://github.com/PalaeoCarb
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3

[options]
python_requires = >3.6
install_requires = 
    numpy
    pandas
    matplotlib
    uncertainties
    scikit-learn
    scipy
    Ipython
    setuptools
include_package_data  = True
